--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jswork/next-alert": "^1.0.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
