--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.14",
+    "dns": "^0.2.2",
     "mongodb": "^5.5.0",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
